resources/istio/files/stats-drop-label.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
    operator.istio.io/component: Pilot
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.5.10
  name: stats-drop-label-filter-1.5
  namespace: istio-system
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
      proxy:
        proxyVersion: ^1\.5.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.wasm
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm
          value:
            config:
              configuration: |
                {
                  "debug": "false",
                  "stat_prefix": "istio",
                  "metrics": {
                    "tags_to_remove": ["destination_canonical_service", "source_canonical_service", "destination_principal", "source_principal", "connection_security_policy", "grpc_response_status", "source_version", "destination_version", "request_protocol", "source_canonical_revision", "destination_canonical_revision", "destination_app", "destination_service", "source_app", "reporter"]
                  },
                  "metrics": {
                    "name": "request_duration_milliseconds_bucket",
                    "tags_to_remove": ["response_code", "response_flags"],
                  },
                  "metrics": {
                    "name": "request_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "request_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "requests-total",
                    "tags_to_remove": ["destination_app", "source_app","response_flags", "destination_service", "reporter"],
                  },
                  "metrics": {
                    "name": "build",
                    "tags_to_remove": ["tag"],
                  },
                  "metrics": {
                    "name": "tcp_received_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                  "metrics": {
                    "name": "tcp_sent_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                }
              root_id: stats_outbound
              vm_config:
                code:
                  local:
                    inline_string: envoy.wasm.stats
                runtime: envoy.wasm.runtime.null
                vm_id: stats_outbound
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
      proxy:
        proxyVersion: ^1\.5.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.wasm
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm
          value:
            config:
              configuration: |
                {
                  "debug": "false",
                  "stat_prefix": "istio",
                  "metrics": {
                    "tags_to_remove": ["destination_canonical_service", "source_canonical_service", "destination_principal", "source_principal", "connection_security_policy", "grpc_response_status", "source_version", "destination_version", "request_protocol", "source_canonical_revision", "destination_canonical_revision", "destination_app", "destination_service", "source_app", "reporter"]
                  },
                  "metrics": {
                    "name": "request_duration_milliseconds_bucket",
                    "tags_to_remove": ["response_code", "response_flags"],
                  },
                  "metrics": {
                    "name": "request_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "request_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "requests-total",
                    "tags_to_remove": ["destination_app", "source_app","response_flags", "destination_service", "reporter"],
                  },
                  "metrics": {
                    "name": "build",
                    "tags_to_remove": ["tag"],
                  },
                  "metrics": {
                    "name": "tcp_received_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                  "metrics": {
                    "name": "tcp_sent_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                }
              root_id: stats_inbound
              vm_config:
                code:
                  local:
                    inline_string: envoy.wasm.stats
                runtime: envoy.wasm.runtime.null
                vm_id: stats_inbound
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
      proxy:
        proxyVersion: ^1\.5.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.wasm
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.config.filter.http.wasm.v2.Wasm
          value:
            config:
              configuration: |
                {
                  "debug": "false",
                  "stat_prefix": "istio",
                  "metrics": {
                    "tags_to_remove": ["destination_canonical_service", "source_canonical_service", "destination_principal", "source_principal", "connection_security_policy", "grpc_response_status", "source_version", "destination_version", "request_protocol", "source_canonical_revision", "destination_canonical_revision", "destination_app", "destination_service", "source_app", "reporter"]
                  },
                  "metrics": {
                    "name": "request_duration_milliseconds_bucket",
                    "tags_to_remove": ["response_code", "response_flags"],
                  },
                  "metrics": {
                    "name": "request_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "request_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_bucket",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "response_bytes_sum",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter"],
                  },
                  "metrics": {
                    "name": "requests-total",
                    "tags_to_remove": ["destination_app", "source_app","response_flags", "destination_service", "reporter"],
                  },
                  "metrics": {
                    "name": "build",
                    "tags_to_remove": ["tag"],
                  },
                  "metrics": {
                    "name": "tcp_received_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                  "metrics": {
                    "name": "tcp_sent_bytes_total",
                    "tags_to_remove": ["destination_app", "destination_service", "source_app", "reporter", "connection_security_policy", "destination_canonical_service", "destination_canonical_revision", "detination_principal", "destination_version", "reporter","request_protocol", "response_flags", "source_canonical_service", "source_canonical_revision", "source_principal", "source_version", "source_app"],
                  },
                }
              root_id: stats_outbound
              vm_config:
                code:
                  local:
                    inline_string: envoy.wasm.stats
                runtime: envoy.wasm.runtime.null
                vm_id: stats_outbound
